--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <title>Document</title>
+    <title>BarCoffe</title>
+    <link rel="icon" type="image/png" href="asset/theking.png" />
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="57">
     <!-- Header -->
